--- a/resources/frontend/angular/package.json
+++ b/resources/frontend/angular/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "angular-best-boilerplate",
+  "name": "angular",
   "version": "0.2.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --open --proxy-config=proxy.conf.json",
+    "start": "ng serve --configuration=dev --open",
     "build": "ng build",
+    "build:prod": "ng build --prod && cp ../../../public/assets/angular/index.html ../../views/angular.blade.php",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "stats": "ng build --prod --stats-json",
-    "analyze": "webpack-bundle-analyzer dist/angular-best-boilerplate/stats-es5.json",
+    "analyze": "webpack-bundle-analyzer dist/angular/stats-es5.json",
     "analyzer": "npm run stats && npm run analyze"
   },
   "private": true,
@@ -20,14 +21,17 @@
   },
   "dependencies": {
     "@angular/animations": "^8.0.2",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "^8.0.2",
     "@angular/compiler": "^8.0.2",
     "@angular/core": "^8.0.2",
     "@angular/forms": "^8.0.2",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^8.0.2",
     "@angular/platform-browser-dynamic": "^8.0.2",
     "@angular/router": "^8.0.2",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -36,7 +40,7 @@
     "@angular-devkit/build-angular": "~0.800.0",
     "@angular/cli": "~8.0.3",
     "@angular/compiler-cli": "^8.0.2",
-    "@angular/language-service": "^8.0.2",
+    "@angular/languagangular": "^8.0.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
