--- a/resources/frontend/angular/src/tsconfig.app.json
+++ b/resources/frontend/angular/src/tsconfig.app.json
@@ -4,12 +4,11 @@
     "outDir": "../out-tsc/app",
     "types": []
   },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts",
-    "**/*.mock.ts",
-    "**/*.spy.ts",
-    "**/*.stub.ts",
-    "test/**"
+  "files": [
+    "main.ts",
+    "polyfills.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
   ]
 }
