--- a/resources/frontend/angular/package.json
+++ b/resources/frontend/angular/package.json
@@ -20,14 +20,16 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "^10.2.4",
-    "@angular/common": "^10.2.4",
-    "@angular/compiler": "^10.2.4",
-    "@angular/core": "^10.2.4",
-    "@angular/forms": "^10.2.4",
-    "@angular/platform-browser": "^10.2.4",
-    "@angular/platform-browser-dynamic": "^10.2.4",
-    "@angular/router": "^10.2.4",
+    "@angular/animations": "^11.2.6",
+    "@angular/cdk": "^11.2.5",
+    "@angular/common": "^11.2.6",
+    "@angular/compiler": "^11.2.6",
+    "@angular/core": "^11.2.6",
+    "@angular/forms": "^11.2.6",
+    "@angular/material": "^11.2.5",
+    "@angular/platform-browser": "^11.2.6",
+    "@angular/platform-browser-dynamic": "^11.2.6",
+    "@angular/router": "^11.2.6",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.6.6",
@@ -35,17 +37,17 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.3",
-    "@angular/cli": "~10.2.3",
-    "@angular/compiler-cli": "^10.2.4",
-    "@angular/localize": "^10.2.4",
-    "@types/jasmine": "~2.8.8",
+    "@angular-devkit/build-angular": "~0.1102.5",
+    "@angular/cli": "~11.2.5",
+    "@angular/compiler-cli": "^11.2.6",
+    "@angular/localize": "^11.2.6",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "husky": "^2.4.1",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.2.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
