basic interface w/ sidenav material components

--- a/resources/frontend/angular/package.json
+++ b/resources/frontend/angular/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --configuration=dev --open",
+    "start": "ng serve --configuration=dev --open --sourceMap=false",
     "build": "ng build",
     "build:prod": "ng build --prod && cp ../../../public/assets/angular/index.html ../../views/angular.blade.php",
     "test": "ng test",
@@ -44,6 +44,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.1",
     "husky": "^2.4.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
