--- a/resources/frontend/angular/package.json
+++ b/resources/frontend/angular/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --configuration=dev --open --sourceMap=false",
+    "start": "ng serve --configuration=dev --open",
     "build": "ng build",
     "build:prod": "ng build --prod && cp ../../../public/assets/angular/index.html ../../views/angular.blade.php",
     "test": "ng test",
