landing page animation, rename project, README

--- a/resources/frontend/angular/angular.json
+++ b/resources/frontend/angular/angular.json
@@ -78,7 +78,7 @@
               ],
               "outputPath": "dist/assets/angular",
               "baseHref": "/assets/angular/",
-              "optimization": true,
+              "optimization": false,
               "outputHashing": "all",
               "sourceMap": false,
               "namedChunks": false,
