--- a/resources/frontend/angular/package.json
+++ b/resources/frontend/angular/package.json
@@ -31,6 +31,8 @@
     "@angular/router": "^11.2.6",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "keycloak-angular": "^8.1.0",
+    "keycloak-js": "^10.0.2",
     "rxjs": "~6.6.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
