--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "postcss": "^8.1.14"
     },
     "dependencies": {
-        "@types/googlemaps": "^3.43.3"
+        "@types/googlemaps": "^3.43.3",
+        "ngx-localstorage": "^3.3.0"
     }
 }
