adds fontawesome, rework styles & subscription form

--- a/resources/frontend/angular/package.json
+++ b/resources/frontend/angular/package.json
@@ -29,6 +29,9 @@
     "@angular/platform-browser": "^11.2.6",
     "@angular/platform-browser-dynamic": "^11.2.6",
     "@angular/router": "^11.2.6",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.6.6",
